# app/Models/User.php
@@ -8,8 +8,9 @@ use Illuminate\Database\Eloquent\Relations\HasOne;
 use OpenApi\Attributes as OA;
 
 #[OA\Schema(schema: "User", properties: [
-    new OA\Property(property: "name", type: "string", example: "Jhon"),
-    new OA\Property(property: "email", type: "string", example: "Doe")
+    new OA\Property(property: "name", type: "string", example: "John"),
+    new OA\Property(property: "email", type: "string", example: "john.doe@gmail.com"),
+    new OA\Property(property: "password", type: "string", example: "password")
 ])]
 
 class User extends Model
@@ -49,5 +50,19 @@ class User extends Model
     public function profile(): HasOne
     {
         return $this->hasOne(Profile::class, 'user_id', 'id');
+    }
+
+    protected static function booted()
+    {
+        static::created(function (User $user) {
+            // Créer un profil associé à l'utilisateur
+            $user->profile()->create([
+                'username' => $user->name, // Exemple : utiliser le nom de l'utilisateur comme username
+                'location' => '', // Valeur par défaut
+                'interests' => '', // Valeur par défaut
+                'bio' => '', // Valeur par défaut
+                'profile_picture' => '', // Valeur par défaut
+            ]);
+        });
     }
 }
